# ironveil

./: CMakeLists.txt  README.md  main  package-lock.json  package.json
proto/: your_service.proto
src/: main.cpp
src/core/: core.hpp  core_linux.cpp  core_macos.cpp  core_windows.cpp
utils/: logger.cpp  logger.hpp
